# SkyCycle

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/: common.py  main.py  runner.py  wallpaper_updater.py
src/routes/: activate_profile.py  add_profile.py  deactivate_profile.py  remove_profile.py  setup_location.py  setup_platform.py
