[project]
name = "skycycle"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "astral>=3.2",
    "geopy>=2.4.1",
    "psutil>=7.1.3",
    "pytz>=2025.2",
    "tzfpy>=1.1.0",
    "wcwidth>=0.2.14",
]


[project.scripts]
skycycle = "src.main:main"

[dependency-groups]
dev = [
    "pyinstaller>=6.16.0",
]
